--- a/daily.html
+++ b/daily.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <header id="header">
-            <h1><a href="khsite.html">KHHS</a></h1>
+            <h1><a href="index.html">KHHS</a></h1>
             <ul id="na">
                 <li id="na_l"><a href="menu.html">급식정보</a></li>
                 <li id="na_l"><a href="daily.html">학사일정</a></li>
